--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -11,6 +11,8 @@
   font-size: 24px;
   font-family: 'Arial', sans-serif;
   margin-right: auto;
+  color: white;
+  text-decoration: none;
 }
 
 .navbar-nav {
@@ -30,6 +32,4 @@
   transition: color 0.3s;
 }
 
-.nav-link:hover {
-  color: #00ff00; /* Green color */
-}
+
