--- a/client/src/styles/GradeHistory.css
+++ b/client/src/styles/GradeHistory.css
@@ -1,11 +1,40 @@
-.container {
+.container-history {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 40px auto; /* Add margin to center vertically */
   padding: 20px;
   background-color: #f7f7f7;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height: 400px;
+  overflow: auto;
+  position: relative;
+
+ 
+}
+
+.floating-container-grade {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-bottom: 100px;
+}
+
+
+.final-score {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  gap: 50px;
 }
 
 .container h2 {
@@ -31,6 +60,19 @@
   font-weight: bold;
 }
 
-.container p {
-  margin: 8px 0;
+.edit-btn {
+  margin-left: auto;
+  padding: 8px 16px;
+  background-color: #4c75f2;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.edit-btn:hover {
+  background-color: #2a4da6;
 }
