--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -43,7 +43,8 @@
 }
 
 .close-btn {
-  background-color: transparent;
+  background-color: #4c75f2;
+  color: #fff;
   border: none;
   font-size: 24px;
   cursor: pointer;
@@ -51,7 +52,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #999;
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+}
+
+.close-btn:hover {
+  background-color: #3562c6;
 }
 
 .modal-body {
